// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollView should accept other paddings 1`] = `
<RCTScrollView
  backgroundColor="white"
  keyboardDismissMode="interactive"
  keyboardShouldPersistTaps="never"
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "display": "flex",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "width": "100%",
      },
    ]
  }
>
  <View>
    <View
      backgroundShade="base"
      dir="column"
      display="flex"
      position="relative"
      spacing="lg"
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "paddingBottom": 24,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 24,
          "position": "relative",
          "width": "100%",
        }
      }
      testID="view"
    />
  </View>
</RCTScrollView>
`;

exports[`ScrollView should render 1`] = `
<RCTScrollView
  backgroundColor="white"
  keyboardDismissMode="interactive"
  keyboardShouldPersistTaps="never"
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "display": "flex",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "width": "100%",
      },
    ]
  }
>
  <View>
    <View
      backgroundShade="base"
      dir="column"
      display="flex"
      position="relative"
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
          "position": "relative",
          "width": "100%",
        }
      }
      testID="view"
    />
  </View>
</RCTScrollView>
`;
